--- a/Spring-Project/src/main/resources/application.yml
+++ b/Spring-Project/src/main/resources/application.yml
@@ -4,6 +4,10 @@ server:
 spring:
   application:
     name: yama
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
 
   datasource:
     url: jdbc:mysql://localhost:3306/yama
