--- a/Spring-Project/src/main/resources/application.yml
+++ b/Spring-Project/src/main/resources/application.yml
@@ -8,9 +8,12 @@ spring:
     hiddenmethod:
       filter:
         enabled: true
+  web:
+    resources:
+      static-locations: classpath:/static/
 
   datasource:
-    url: jdbc:mysql://localhost:3306/yama
+    url: jdbc:mysql://localhost:3306/yama_db
     username: root
     password: '0000'
     driver-class-name: com.mysql.cj.jdbc.Driver
