feat: 게시글 작성 요청 시 이미지도 같이 저장
Issue: 40

--- a/Spring-Project/src/main/resources/application.yml
+++ b/Spring-Project/src/main/resources/application.yml
@@ -12,6 +12,10 @@ spring:
     resources:
       static-locations: classpath:/static/
 
+  servlet:
+    multipart:
+      max-file-size: 10MB
+
   datasource:
     url: jdbc:mysql://localhost:3306/yama
     username: root
