--- a/Spring-Project/build.gradle
+++ b/Spring-Project/build.gradle
@@ -30,8 +30,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-configuration-processor'
     implementation 'org.projectlombok:lombok'
     annotationProcessor('org.projectlombok:lombok')
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
-    //	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     implementation 'com.mysql:mysql-connector-j'
